--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -37,3 +37,30 @@ jobs:
           with:
             name: Mocha-Test-Result
             path: test-results.xml
+    
+    code-coverage:
+         name: Code Coverage
+         runs-on: ubuntu-latest
+         steps:
+         - name: Checkout Repository
+           uses: actions/checkout@v4
+
+         - name: Setup NodeJS Version
+           uses: actions/setup-node@v4
+           with:
+             node-version: 18
+          
+         - name: Install Dependencies
+           run: npm install
+         - continue-on-error: true
+         - name: Code Coverage
+           run: npm run code-coverage
+         
+         - name: Archive Test Result
+           uses: actions/upload-artifact@v4
+           with:
+             name: Code-Coverage-Result
+             path: coverage
+             retention-days: 5  
+
+        
