--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -52,7 +52,7 @@ jobs:
           
          - name: Install Dependencies
            run: npm install
-         - continue-on-error: true
+           continue-on-error: true
          - name: Code Coverage
            run: npm run code-coverage
          
